--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.13"
+  }
 }
