--- a/package.json
+++ b/package.json
@@ -17,15 +17,8 @@
     "url": "https://github.com/aledruetta/canvas-butterfly/issues"
   },
   "homepage": "https://github.com/aledruetta/canvas-butterfly#readme",
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "js-yaml": "^3.13.1",
-    "lodash": "^4.17.15"
+    "eslint": "^6.8.0"
   }
 }
